--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
+      <!--display current date here-->
+      <p id="current-date"></p>
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
@@ -34,5 +36,6 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./Develop/script.js"></script>
   </body>
 </html>
