--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Develop/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -27,11 +27,60 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <!--display current date here-->
-      <p id="current-date"></p>
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div id="800" class="row time-block">
+        <div class="col-1 hour">08:00 AM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
+      <div id="900" class="row time-block">
+        <div class="col-1 hour">09:00 AM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
+      <div id="1000" class="row time-block">
+        <div class="col-1 hour">10:00 AM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
+      <div id="1100" class="row time-block">
+        <div class="col-1 hour">11:00 AM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
+      <div id="1200" class="row time-block">
+        <div class="col-1 hour">12:00 PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
+      <div id="1300" class="row time-block">
+        <div class="col-1 hour">01:00 PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
+      <div id="1400" class="row time-block">
+        <div class="col-1 hour">02:00 PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
+      <div id="1500" class="row time-block">
+        <div class="col-1 hour">03:00 PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
+      <div id="1600" class="row time-block">
+        <div class="col-1 hour">04:00 PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
+      <div id="1700" class="row time-block">
+        <div class="col-1 hour">05:00 PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
