--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--Head Start-->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,7 +22,7 @@
     <link rel="stylesheet" href="Develop/style.css" />
     <title>Work Day Scheduler</title>
   </head>
-
+<!--Body Start-->
   <body>
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
@@ -31,58 +32,58 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div id="800" class="row time-block">
+      <div id="08" class="row time-block">
         <div class="col-1 hour">08:00 AM</div>
         <textarea class="col-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
-      <div id="900" class="row time-block">
+      <div id="09" class="row time-block">
         <div class="col-1 hour">09:00 AM</div>
         <textarea class="col-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
-      <div id="1000" class="row time-block">
+      <div id="10" class="row time-block">
         <div class="col-1 hour">10:00 AM</div>
         <textarea class="col-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
-      <div id="1100" class="row time-block">
+      <div id="11" class="row time-block">
         <div class="col-1 hour">11:00 AM</div>
         <textarea class="col-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
-      <div id="1200" class="row time-block">
+      <div id="12" class="row time-block">
         <div class="col-1 hour">12:00 PM</div>
         <textarea class="col-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
-      <div id="1300" class="row time-block">
+      <div id="13" class="row time-block">
         <div class="col-1 hour">01:00 PM</div>
         <textarea class="col-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
-      <div id="1400" class="row time-block">
+      <div id="14" class="row time-block">
         <div class="col-1 hour">02:00 PM</div>
         <textarea class="col-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
-      <div id="1500" class="row time-block">
+      <div id="15" class="row time-block">
         <div class="col-1 hour">03:00 PM</div>
         <textarea class="col-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
-      <div id="1600" class="row time-block">
+      <div id="16" class="row time-block">
         <div class="col-1 hour">04:00 PM</div>
         <textarea class="col-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
-      <div id="1700" class="row time-block">
+      <div id="17" class="row time-block">
         <div class="col-1 hour">05:00 PM</div>
         <textarea class="col-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
     </div>
-
+<!--JS-->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./Develop/script.js"></script>
